--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>10 March 2001</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>himanshu.is-a.dev</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+945 094  5291</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Kolkata, India</span></li>
               </ul>
@@ -142,7 +142,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
             <i class="bi bi-award"></i>
-            <span data-purecounter-start="0" data-purecounter-end="160" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="180" data-purecounter-duration="1" class="purecounter"></span>
             <p>Questions Solved</p>
           </div>
         </div>
