leetcode link added

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <a href="https://twitter.com/himanshuuu_2001" class="twitter"><i class="bi bi-twitter"></i></a>
         <a href="https://www.linkedin.com/in/himanshu-rai-5599a11b8/" class="linkedin"><i class="bi bi-linkedin"></i></a>
         <a href="https://github.com/HIMU-2001" class="facebook"><i class="bi bi-github"></i></a>
+        <a href="https://leetcode.com/himanshuuu_2001/" class="profile"><i class="bi bi-person-workspace"></i></a>
         <a href="https://instagram.com/himanshuuu_2001?igshid=YzgyMTM2MGM=" class="instagram"><i class="bi bi-instagram"></i></a>
         
       </div>
