--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 
 
   <!-- ======= Header ======= -->
+
+  <div id="preloader"></div> 
   <header id="header">
     <div class="container">
 
@@ -836,12 +838,10 @@
 
     </div>
   </section><!-- End Contact Section -->
-
   <div class="credits">
 
     Designed by <a href="https://www.linkedin.com/in/himanshu-rai-5599a11b8/">Himanshu</a>
   </div>
-
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
